--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -94,57 +94,45 @@ Data augmentation is crucial for addressing imbalances in the training data, all
 
 \textbf{Algorithm Description:}
 
-The reweighing algorithm adjusts sample weights based on sensitive attributes, aiming to equalize the impact of different groups in the training process. It acts as a pre-processing step to ensure fair model training.
+In the context of the Fair-by-Design workflow, five key fairness algorithms have been strategically chosen to comprehensively test the workflow's effectiveness. Each algorithm serves a specific purpose within the workflow, contributing to the overarching goal of achieving fairness in predictions.
 
-\textbf{Reasoning:}
+\subsection{Pre-processing Algorithms}
 
-Reweighing is fundamental for treating different groups fairly during model training. By assigning appropriate weights, the algorithm helps counteract the biases present in the training data.
+\subsubsection{Data Augmentation Algorithm}
+
+\textbf{Algorithm Description:} The proposed data augmentation algorithm introduces synthetic samples to the training dataset. By augmenting the data, especially focusing on underrepresented groups, the algorithm aims to enhance the model's exposure to diverse scenarios, promoting a more robust understanding of the underlying patterns.
+
+\textbf{Reasoning:} Data augmentation is crucial for addressing imbalances in the training data, allowing the model to generalize better across different groups and mitigating biases stemming from insufficient representation.
+
+\subsubsection{Correlation Removal Algorithm}
+
+\textbf{Algorithm Description:} Correlation removal focuses on identifying and mitigating correlations between sensitive attributes and features. It acts as a pre-processing step to reduce the influence of sensitive attributes on the model's predictions.
+
+\textbf{Reasoning:} Correlation removal is essential for eliminating potential sources of bias by disentangling correlations between sensitive attributes and features, contributing to fair model training.
 
 \subsection{In-processing Algorithms}
 
 \subsubsection{ExponentiatedGradient}
 
-\textbf{Algorithm Description:}
+\textbf{Algorithm Description:} The ExponentiatedGradient algorithm applies iterative re-weighting to the training data, seeking to find a fair classifier by minimizing the disparity in predictions across sensitive groups.
 
-The ExponentiatedGradient algorithm applies iterative re-weighting to the training data, seeking to find a fair classifier by minimizing the disparity in predictions across sensitive groups.
+\textbf{Reasoning:} ExponentiatedGradient is chosen for its versatility and effectiveness in in-processing fairness. It provides a fine-tuning mechanism during training to achieve parity in predicted outcomes.
 
-\textbf{Reasoning:}
+\subsubsection{GridSearch}
 
-ExponentiatedGradient is chosen for its versatility and effectiveness in in-processing fairness. It provides a fine-tuning mechanism during training to achieve parity in predicted outcomes.
+\textbf{Algorithm Description:} GridSearch is a generic algorithm that explores a range of hyperparameter values to find the optimal configuration for a fair classifier.
 
-\subsubsection{LFR (Learning Fair Representations)}
-
-\textbf{Algorithm Description:}
-
-LFR focuses on learning fair representations of the data by mapping it to a latent space. It aims to encode features in a way that separates the influence of sensitive attributes from the overall prediction.
-
-\textbf{Reasoning:}
-
-LFR is selected for its ability to disentangle predictive features from sensitive attributes, allowing for fairer representations and reducing the risk of biased predictions.
+\textbf{Reasoning:} GridSearch is included to assess the impact of hyperparameter tuning on fairness outcomes, offering insights into the versatility of the approach.
 
 \subsection{Post-processing Algorithms}
 
-\subsubsection{MetaFairClassifier}
-
-\textbf{Algorithm Description:}
-
-MetaFairClassifier acts as both a post-processing and in-processing meta-algorithm. It modifies a base classifier to achieve fairness by adjusting decision boundaries and re-weighting samples.
-
-\textbf{Reasoning:}
-
-MetaFairClassifier is chosen to assess the impact of modifying a base classifier in both post-processing and in-processing scenarios, offering insights into the versatility of the approach.
-
 \subsubsection{ThresholdOptimizer}
 
-\textbf{Algorithm Description:}
+\textbf{Algorithm Description:} ThresholdOptimizer focuses on adjusting decision thresholds post-modeling to achieve fairness goals. It provides flexibility in fine-tuning predictions without retraining the entire model.
 
-ThresholdOptimizer focuses on adjusting decision thresholds post-modeling to achieve fairness goals. It provides flexibility in fine-tuning predictions without retraining the entire model.
+\textbf{Reasoning:} ThresholdOptimizer is included to evaluate the effectiveness of post-processing adjustments in achieving fairness objectives. It offers a practical and interpretable way to balance accuracy and fairness.
 
-\textbf{Reasoning:}
-
-ThresholdOptimizer is included to evaluate the effectiveness of post-processing adjustments in achieving fairness objectives. It offers a practical and interpretable way to balance accuracy and fairness.
-
-The choice of these six algorithms is driven by the aim of obtaining a holistic view of the Fair-by-Design workflow's performance. By incorporating diverse pre-processing, in-processing, and post-processing strategies, the evaluation can capture the nuances of fairness considerations at different stages of the machine learning pipeline. This comprehensive approach ensures a thorough exploration of potential biases and fairness enhancements, laying the foundation for a robust and equitable model.
+The choice of these five algorithms is driven by the aim of obtaining a holistic view of the Fair-by-Design workflow's performance. By incorporating diverse pre-processing, in-processing, and post-processing strategies, the evaluation can capture the nuances of fairness considerations at different stages of the machine learning pipeline. This comprehensive approach ensures a thorough exploration of potential biases and fairness enhancements, laying the foundation for a robust and equitable model.
 
 \section{Model training and evaluation}
 \label{section:val_mt_eval}
