figure maybe added

--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -111,7 +111,14 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 
 \end{enumerate}
 
-\textbf{********************ADD FIGURE HERE***************************+}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\linewidth]{./workflow-steps.drawio.png}
+    \caption{Workflow steps}
+    \label{fig:worflow_steps}
+\end{figure}
+
 
 \subsection{Objective Definition}
 \label{subsection:objective}
