--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -112,7 +112,10 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 \end{enumerate}
 
 
-\includegraphics[width=\linewidth]{./workflow-steps.drawio.png}
+\begin{center}[h]
+    \includegraphics[width=.5\textwidth, height=1.0\textwidth]{workflow-steps.png}
+\end{center}
+    
 
 
 \subsection{Objective Definition}
