--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -14,6 +14,7 @@
 \usepackage{acronym}
 %\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 
+\graphicspath{{./sections/}}
 
 \newcommand{\thesislang}{english} % commentare in caso di tesi in italiano
 %\usepackage{thesis-style}
