--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -112,8 +112,8 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 \end{enumerate}
 
 
-\begin{center}[h]
-    \includegraphics[width=.5\textwidth, height=1.0\textwidth]{workflow-steps.png}
+\begin{center}
+    \includegraphics[width=.3\textwidth, height=.8\textwidth]{workflow-steps.png}
 \end{center}
     
 
