--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -112,9 +112,10 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 \end{enumerate}
 
 
-\begin{center}
+\begin{figure}[h]
     \includegraphics[width=.3\textwidth, height=.8\textwidth]{workflow-steps.png}
-\end{center}
+    \label{fig:steps}
+\end{figure}
     
 
 
@@ -222,6 +223,8 @@ Group Fairness ensures fair treatment for entire groups, typically based on stat
 \]
 
 A value of 0 suggests parity, while positive or negative values indicate disparities.
+
+
 
 \subsubsection{Choosing Fairness Metrics Given Notions or Vice Versa}
 
