--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -112,10 +112,10 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 \end{enumerate}
 
 
-\begin{figure}[h]
+\begin{center}
     \includegraphics[width=.3\textwidth, height=.8\textwidth]{workflow-steps.png}
     \label{fig:steps}
-\end{figure}
+\end{center}
     
 
 
