--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -112,10 +112,12 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 \end{enumerate}
 
 
-\begin{center}
+\begin{figure}[h]
+    \centering
     \includegraphics[width=.3\textwidth, height=.8\textwidth]{workflow-steps.png}
     \label{fig:steps}
-\end{center}
+    \caption{Fair-by-Design steps}
+\end{figure}
     
 
 
