--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -6,7 +6,7 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{tabularx}
-\usepackage{graphics}
+\usepackage{graphicx}
 \usepackage{disi-thesis}
 \usepackage{code-lstlistings}
 \usepackage{notes}
