--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -112,7 +112,7 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 \end{enumerate}
 
 
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=.3\textwidth, height=.8\textwidth]{workflow-steps.png}
     \label{fig:steps}
