--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -12,6 +12,7 @@
 \usepackage{notes}
 \usepackage{shortcuts}
 \usepackage{acronym}
+\usepackage{float}
 %\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 
 \graphicspath{{./sections/}}
