--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -59,8 +59,8 @@
 
 %----------------------------------------------------------------------------------------
 \tableofcontents   
-%\listoffigures     % (optional) comment if empty
-%\lstlistoflistings % (optional) comment if empty
+\listoffigures     % (optional) comment if empty
+\lstlistoflistings % (optional) comment if empty
 %----------------------------------------------------------------------------------------
 
 \mainmatter
