--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -227,8 +227,7 @@ A value of 0 suggests parity, while positive or negative values indicate dispari
 
 These alighnments are well-represented in the following table
 
-
-\begin{tabular}{|c|c|}
+\begin{tabular}{|c|c|}[h]
     \hline
     \textbf{Fairness notion} & \textbf{Fairness metric} \\
     \hline
