--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -227,7 +227,7 @@ A value of 0 suggests parity, while positive or negative values indicate dispari
 
 These alighnments are well-represented in the following table
 
-\begin{tabular}{|c|c|}[h]
+\begin{tabular}{|c|c|}
     \hline
     \textbf{Fairness notion} & \textbf{Fairness metric} \\
     \hline
@@ -273,7 +273,7 @@ This decisional process is well-represented in the following image:
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.7\textwidth, height=1.1\textwidth]{notion-metric.png}
+    \includegraphics[width=.9\textwidth, height=1.3\textwidth]{notion-metric.png}
     \label{fig:choice}
     \caption{Fairness Notion and Metric choice}
 \end{figure}
