--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -227,6 +227,7 @@ A value of 0 suggests parity, while positive or negative values indicate dispari
 
 These alighnments are well-represented in the following table
 
+
 \begin{tabular}{|c|c|}
     \hline
     \textbf{Fairness notion} & \textbf{Fairness metric} \\
@@ -271,7 +272,7 @@ Choosing a fairness metric given a fairness notion, or vice versa, requires a nu
 
 This decisional process is well-represented in the following image:
 
-\begin{figure}[H]
+\begin{figure}[h]
     \centering
     \includegraphics[width=.9\textwidth, height=1.3\textwidth]{notion-metric.png}
     \label{fig:choice}
