--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -241,7 +241,7 @@ These alighnments are well-represented in the following table
     Group Fairness & Demographic Parity Difference \\
     \hline
 \end{tabular}
-
+\newpage
 \subsubsection{Choosing Fairness Metrics Given Notions or Vice Versa}
 
 Choosing a fairness metric given a fairness notion, or vice versa, requires a nuanced understanding of the specific fairness goals and the characteristics of the data. Here's a step-by-step guide:
@@ -272,7 +272,7 @@ Choosing a fairness metric given a fairness notion, or vice versa, requires a nu
 
 This decisional process is well-represented in the following image:
 
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=.9\textwidth, height=1.3\textwidth]{notion-metric.png}
     \label{fig:choice}
