--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -223,7 +223,7 @@ Group Fairness ensures fair treatment for entire groups, typically based on stat
 \]
 A value of 0 suggests parity, while positive or negative values indicate disparities.
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \begin{tabular}{|c|c|}
         \hline
